[package]
name = "black_scholes_pricer"
version = "0.2.1"
authors = ["ronnie chowdhury <ronnie.c995@gmail.com>"]
edition = "2018"
description = "Scalar and SIMD vectorised versions of black scholes and binomial option pricing"
license = "MIT"
repository = "https://github.com/ronniec95/black_scholes"
documentation = "https://docs.rs/black_scholes_simd"
readme = "README.md"
keywords = ["option","pricing","simd","black","scholes"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "black_scholes_pricer"

[dependencies]
wide= "0.5"
bytemuck = "^1"
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
opt-level = "s"

